--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
             </div>
             <div class="second-box">
                 <div class="small-article">
-                    <img src="images/image6.png"> 
+                    <img class="small-article-img" alt="article-image" src="images/image6.png"> 
                     <h3 class="small-title"> Small title  </h3>
                     <div class="time-showed"> <img class="time" alt="time" src="images/time.svg"> 3h ago by <span class="author"> Worldnews </span> </div>
                  </div>
                  <div class="small-article">
-                    <img src="images/image7.png"> 
+                    <img class="small-article-img" alt="article-image"  src="images/image7.png"> 
                     <h3 class="small-title"> Small title  </h3>
                     <div class="time-showed"> <img class="time" alt="time" src="images/time.svg"> 4h ago by <span class="author"> Days </span> </div>
                  </div>
                  <div class="small-article">
-                    <img src="images/image8.png"> 
+                    <img class="small-article-img" alt="article-image"  src="images/image8.png"> 
                     <h3 class="small-title"> Small title  </h3>
                     <div class="time-showed"> <img class="time" alt="time" src="images/time.svg"> 3h ago by <span class="author"> Monica </span> </div>
                  </div>
