--- a/index2.html
+++ b/index2.html
@@ -64,26 +64,24 @@
                <img class="avatar" alt="avatar" src="images/avatar.svg">
                <h3 class="column-title"> Phasellus eu nulla malesuada, luctus diam. </h3>
            </div>
-           <div class="column-article"> 
-               <p class="article-text">
-                   Dignissim rutrum ridiculus lacinia phasellus torquent ad aliquet, nisi dictum cubilia class habitasse commodo,
-                   semper potenti nec ac per egestas. Ac volutpat ullamcorper phasellus montes sollicitudin litora ridiculus mi conubia
-                   nceptos euismod odio curabitur, tortor eros porta venenatis facilisis quam blandit in ut lobortis consequat justo
-                   Hac libero quisque tortor conubia iaculis 
-               </p>
+           <div class="column-article-wrapper">
+              <div class="column-article"> 
+                  <p class="article-text">
+                      Dignissim rutrum ridiculus lacinia phasellus torquent ad aliquet, nisi dictum cubilia class habitasse commodo,
+                      semper potenti nec ac per egestas. Ac volutpat ullamcorper phasellus montes sollicitudin litora ridiculus mi conubia
+                      nceptos euismod odio curabitur, tortor eros porta venenatis facilisis quam blandit in ut lobortis consequat justo
+                      Hac libero quisque tortor conubia iaculis 
+                  </p>
+              </div>
+              <div class="column-article"> 
+                  <p class="article-text">
+                      Nascetur himenaeos morbi gravida porta sapien justo aliquam pellentesque dapibus curae, cursus ultrices suspendiss
+                      ligula id aenean vulputate taciti, eleifend eros bibendum scelerisque lobortis venenatis nulla tristique tempus. 
+                      Quisque eleifend vulputate.
+                  </p>
+                  <span class="time-showed"> <img class="time" alt="time" src="images/time.svg"> 2 min ago </span>
+               </div>
            </div>
-           <div class="column-article"> 
-            <p class="article-text">
-                <div class="column-article"> 
-               <p class="article-text">
-                   Nascetur himenaeos morbi gravida porta sapien justo aliquam pellentesque dapibus curae, cursus ultrices suspendiss
-                   ligula id aenean vulputate taciti, eleifend eros bibendum scelerisque lobortis venenatis nulla tristique tempus. 
-                   Quisque eleifend vulputate.
-               </p>
-               <span class="time-showed"> <img class="time" alt="time" src="images/time.svg"> 2 min ago </span>
-           </div>
-            </p>
-        </div>
         </div>
     </div>
     <div class="article-container">
